syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message TransactionCount {
  option (gorm.opts) = {ormable: true};

  uint64 count = 1;
  string type = 2 [(gorm.field).tag = {primary_key: true}]; // regular, internal, token_transfer
  string transaction_hash = 3;
  int32 log_index = 4;
}
