syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message TransactionTokenTransferCountIndex {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {primary_key: true}];
  int32 log_index = 2 [(gorm.field).tag = {primary_key: true}];
}
